rust/macros/tests/invalid/target/debug/deps/only_arrow_rs-21029b16025933f3.d
/home/anthony/repos/github.com/playground/exercism/rust/macros/tests/invalid/target/debug/deps/only_arrow_rs-21029b16025933f3: only-arrow.rs

/home/anthony/repos/github.com/playground/exercism/rust/macros/tests/invalid/target/debug/deps/only_arrow_rs-21029b16025933f3.d: only-arrow.rs

only-arrow.rs:
